import "PointStructure.proto";
import "MARKER_COMMON_CHARACTERISTICS.proto";

option java_package = "com.aolais.electroraven.is2viewerbeta.protos";
option java_outer_classname = "UserDefinedMarkerPoint";

message USER_DEFINED_MARKER_POINT{
 required PointStructure                 markerPixelIndex=1;
 required MARKER_COMMON_CHARACTERISTICS  characteristics=2;
}
 
 